public class CoordinadorDeRuta {
    private List<Ruta> rutasActivas = new LinkedList<Ruta>();
    
    public void asignarRuta(Recolector rec, Ruta ruta);
}
