public class Recolector {
    private String nombre;
    private String rut;

    public Recolector(String nombre, String rut) {
        this.nombre = nombre;
        this.rut = rut;
    }
}
